package com.example.restaurantreservation.loyalty.domain.enums;

public enum TransactionType {
    EARNED, REDEEMED, EXPIRED, ADJUSTED
}
