package com.example.restaurantreservation.menu.domain.enums;

public enum MenuCategory {
    APPETIZER, MAIN, DESSERT, BEVERAGE
}
