package com.example.restaurantreservation.booking.domain.enums;

public enum BookingStatus {
    PENDING, CONFIRMED, SEATED, COMPLETED, CANCELLED
}
