package com.example.restaurantreservation.booking.domain.enums;

public enum PreOrderStatus {
    DRAFT, SUBMITTED, CONFIRMED, PREPARED
}
