package com.example.restaurantreservation.floor.domain.enums;

public enum TableStatus {
    AVAILABLE, RESERVED, OCCUPIED, MAINTENANCE
}
